--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng build --prod && nodemon server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -19,7 +19,17 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "body-parser": "^1.18.2",
     "core-js": "^2.5.4",
+    "express": "^4.16.3",
+    "jquery": "^3.3.1",
+    "jspdf": "^1.5.3",
+    "msnodesqlv8": "^0.6.12",
+    "mssql": "^4.3.2",
+    "mysql": "^2.15.0",
+    "ng2-order-pipe": "^0.1.5",
+    "ngx-pagination": "^3.2.1",
+    "nodemon": "^1.18.10",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -29,9 +39,10 @@
     "@angular/cli": "~7.3.2",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jspdf": "^1.2.2",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
