--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ngx-pagination": "^3.2.1",
     "ngx-spinner": "^7.0.0",
     "nodemon": "^1.18.10",
+    "heroku-postbuild": "ng build --prod",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
