--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ngx-spinner": "^7.0.0",
     "nodemon": "^1.18.10",
     "postinstall": "^0.4.2",
+    "heroku-postbuild": "ng build --prod",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
