--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng build --prod && nodemon server.js",
+    "start": "ng build --prod --aot=flase && nodemon server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -31,7 +31,6 @@
     "ngx-spinner": "^7.0.0",
     "nodemon": "^1.18.10",
     "postinstall": "^0.4.2",
-    "heroku-postbuild": "ng build --prod",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
