--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng build --prod  && nodemon server.js",
+    "start": "ng build --prod  && node server.js",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
